--- a/src/main/webapp/WEB-INF/resource/css/mycss.css
+++ b/src/main/webapp/WEB-INF/resource/css/mycss.css
@@ -51,19 +51,21 @@ input[readonly=readonly] {
 }
 
 .tag-new {
-	margin:5px 0;
+	margin:5px 10px;
 	padding:10px;
 	background: #fff;
 }
 
-.tag-new input{
-	margin:10px 10px 0 0;
+.tag-new div {
+	margin 15px;
 }
 
 .tag-new .input-tag-new {
+	margin:5px 15px 10px 0;
 	border:1px solid #ddd;
 	background:#fffff6;
 	font-size:16px;
+	line-height:18px;
 }
 
 .tag-name {
