模板和主页面调整，新增关注页面

--- a/src/main/webapp/WEB-INF/resource/css/common.css
+++ b/src/main/webapp/WEB-INF/resource/css/common.css
@@ -188,3 +188,51 @@ nav.subbar > ul.nav.nav-tabs > li.active > a {
 .sidebar-caret a:hover {
 	color: #fff;
 }
+
+/*from:http://bootsnipp.com/snippets/featured/hover-blue-button-bar*/
+#nav-button .btn-sm{
+  position: relative;
+  vertical-align: center;
+  margin: 0px;
+  height: 100x;
+  padding: 20px 20px;
+  font-size: 4px;
+  color: white;
+  text-align: center;
+  text-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
+  background: #62b1d0;
+  border: 0;
+  border-bottom: 3px solid #9FE8EF;
+  cursor: pointer;
+  -webkit-box-shadow: inset 0 -3px #9FE8EF;
+  box-shadow: inset 0 -3px #9FE8EF;
+}
+
+#nav-button .btn-sm:active {
+  top: 2px;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+#nav-button .btn-sm:hover {
+  background: #45E1E8;
+}
+
+
+/*TAG*/
+.tag a {
+	cursor: pointer;
+	/*border: 1px solid #f9f9f9;*/
+    background: #3498db;
+    border-radius: 20px;
+    color:white;
+    padding: 2px 25px;
+}
+
+/*template.jsp*/
+.content-box {
+	border:1px solid #ddd7d7;
+}
+
+
+
