--- a/src/main/webapp/WEB-INF/resource/css/mycss.css
+++ b/src/main/webapp/WEB-INF/resource/css/mycss.css
@@ -217,7 +217,6 @@ a:focus,a:hover,a{
 
 .video-img {
 	overflow:hidden;
-	height:100px;
 	margin-bottom:15px;
 }
 
@@ -261,14 +260,14 @@ ul .dropdown-menu{
   height: 60px;
  
   position: relative;
-  margin: 100px auto;
+  margin: 30px auto;
 }
  
 .double-bounce1, .double-bounce2 {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: #000;
+  background-color: #BBB;
   opacity: 0.6;
   position: absolute;
   top: 0;
@@ -315,5 +314,10 @@ ul .dropdown-menu{
 .navbar-default .navbar-nav > .open > a:focus {
 	color:#FFF;
 	background:rgba(0,0,0,0.2);
+}
+
+
+.video-section {
+	padding: 0 20px;
 }
 
