--- a/src/main/webapp/WEB-INF/resource/css/common.css
+++ b/src/main/webapp/WEB-INF/resource/css/common.css
@@ -25,8 +25,8 @@
     width: 50px;
     height: 100%;
     overflow-y: auto;
-    background: #2A3F54;
-	color: #ffffff;
+    background: #ffffff;
+	color: #000000;
 	-webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
