--- a/src/main/webapp/WEB-INF/resource/css/mycss.css
+++ b/src/main/webapp/WEB-INF/resource/css/mycss.css
@@ -105,21 +105,20 @@ input[readonly=readonly] {
 	margin-top: 60px;
 }
 
-form[role=login] {
+div[role=login] {
 	color: #5d5d5d;
-	background: #f2f2f2;
-	padding: 30px;
+	padding: 20px 30px 10px 30px;
 	border-radius: 10px;
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
 }
 
-form[role=login] input.form-control{
+div[role=login] input.form-control{
 	font-size: 18px;
 	margin: 12px 0;
 }
 
-form[role=login] .btn {
+div[role=login] .btn {
 	font-size: 16px;
 	margin: 0 5% 0 5%;
 }
