--- a/src/main/webapp/WEB-INF/templates/base/layout.html
+++ b/src/main/webapp/WEB-INF/templates/base/layout.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<th:block th:replace="lib" />
+	<title>Insert title here</title>
 </head>
+
 <body th:fragment="template_content(content)">
+	
 	<div class="row">
-		<div th:replace="header :: header"></div>
+		<div th:replace="~{base/header}"></div>
 	</div>
+	
 	<div class="row" style="padding: 35px 0 0 0;">
 		<div class="col-md-1">
 			<!-- <div th:replace="nav :: nav"></div> -->
@@ -16,5 +20,7 @@
 			<div th:replace="${content}"></div>
 		</div>
 	</div>
+	
 </body>
+
 </html>
