增加关键字搜索功能

--- a/src/main/webapp/WEB-INF/templates/dic_index.html
+++ b/src/main/webapp/WEB-INF/templates/dic_index.html
@@ -15,9 +15,12 @@
 	<div class="ui grid" style="height: 500px">
 		<div class="ui vertical menu three wide column"
 			style="overflow-y: scroll">
-			<div class="ui icon search fluid input">
-				<i class="search icon"></i> <input type="text" name="search"
-					placeholder="搜索问题...">
+
+			<!-- 搜索自动填充 -->
+			<div class="ui icon search fluid input" style="padding:10px 0 10px 0;">
+				<i class="search icon"></i> 
+				<input class="prompt" type="text" name="search" placeholder="搜索...">
+				<div class="results"></div>
 			</div>
 
 			<button class="ui fluid teal button">
@@ -25,8 +28,7 @@
 			</button>
 
 			<div class="divider"></div>
-			<a class="item">重要</a> <a class="item">重要</a> <a class="item">重要</a>
-			<a class="item"> 重要
+			<a class="item active">重要
 				<div class="ui label right pointing dropdown icon button">
 					<i class="settings icon"></i>
 					<div class="menu">
@@ -38,7 +40,11 @@
 						</div>
 					</div>
 				</div>
-			</a> <a class="item">重要</a>
+			</a> 
+			<a class="item">重要</a> 
+			<a class="item">重要</a>
+			<a class="item">重要</a>
+			<a class="item">重要</a>
 		</div>
 		<div class="ui ten wide column" style="background: grey">
 
@@ -88,27 +94,29 @@
 	<div class="ui small modal">
 		<i class="close icon"></i>
 		<div class="header">新增字典数据</div>
-		<div class="content">
-			<form class="ui form" action="">
-			
+		
+		<div class="content ui form">
+			<form class="" action="">
 				<div class="ui field fluid input">
-					<input placeholder="编码"/>
+					<input name="code" placeholder="编码"/>
 				</div>
 				<div class="ui field fluid input">
-					<input placeholder="文字"/>
+					<input name="name" placeholder="文字"/>
 				</div>	
 				<div class="ui field fluid input">
-					<input placeholder="顺序"/>
+					<input name="order" placeholder="顺序"/>
 				</div>	
 				<div class="ui field fluid input">
-					<input placeholder="状态"/>
+					<select class="ui dropdown">
+						<option value="">状态</option>
+						<option value="1" selected="selected">使用</option>
+						<option value="0">暂停</option>
+					</select>
 				</div>	
 			</form>
 		</div>
 		<div class="actions">
-			<div class="ui positive right labeled icon button">
-				保存 <i class="checkmark icon"></i>
-			</div>
+			<div class="ui approve green button">Approve</div>
 		</div>
 	</div>
 
@@ -118,7 +126,35 @@
 		$('#addDictionaryData').click(function() {
 			$('.ui.small.modal').modal('show');	
 		});
-		
+		$('.ui.form')
+			.form({
+				on: 'blur',
+		    fields: {
+		      code		: 'empty',
+		      name		: 'empty',
+		      order		: 'number'
+		    }
+  	});
+
+		var content = [
+    {
+      title: 'Horse',
+      description: 'An Animal',
+    },
+    {
+      title: 'Cow',
+      description: 'Another Animal',
+    }
+  ]
+;
+$('.ui.search')
+  .search({
+    source : content,
+    searchFields   : [
+      'title'
+    ]
+  })
+;
 	</script>
 </body>
 </html>
