--- a/src/main/webapp/WEB-INF/templates/dic_index.html
+++ b/src/main/webapp/WEB-INF/templates/dic_index.html
@@ -2,13 +2,23 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>user login</title>
-<script type="text/javascript" th:src="@{/js/validate.js}"></script>
-<link href="../resource/semantic/semantic.css" rel="stylesheet"></link>
+<!-- <link href="../resource/semantic/semantic.css" rel="stylesheet"></link>
 <script type="text/javascript" src="../resource/js/tools/jquery.js"></script>
-<script type="text/javascript" src="../resource/semantic/semantic.js"></script>
-<script type="text/javascript"
-	src="../resource/semantic/components/checkbox.js"></script>
-<th:block th:replace="~{base/lib}"></th:block>
+<script type="text/javascript" src="../resource/semantic/semantic.js"></script> -->
+
+<link th:href="@{/semantic/semantic.css}" 
+	href="../resource/semantic/semantic.css" rel="stylesheet"></link>
+<script th:src="@{/js/tools/jquery.js}"   
+	src="../resource/js/tools/jquery.js" type="text/javascript"></script>
+<script th:src="@{/semantic/semantic.js}"  
+	src="../resource/semantic/semantic.js" type="text/javascript"></script>
+
+<script type="text/javascript" th:src="@{/js/tools/browser.min.js}"/></script>
+<script type="text/javascript" th:src="@{/js/tools/react.js}"></script>
+<script type="text/javascript" th:src="@{/js/tools/react-dom.js}"></script>
+<script th:src="@{/js/semantic-dic.js}" 
+	src="../resource/js/semantic-dic.js" type="text/babel"></script>
+
 </head>
 
 <body>
@@ -26,67 +36,29 @@
 			<button class="ui fluid teal button">
 				<i class="ui add icon"></i> 新增
 			</button>
-
+			
 			<div class="divider"></div>
-			<a class="item active">重要
-				<div class="ui label right pointing dropdown icon button">
-					<i class="settings icon"></i>
-					<div class="menu">
-						<div class="item">
-							<i class="ui edit icon"></i> 修改
-						</div>
-						<div class="item">
-							<i class="ui remove icon"></i> 删除
+			
+			<th:block th:each="dictionary : ${dictionaries}">
+				<a class="item" th:data-code="*{dictionary.code}">
+					<th:block th:text="*{dictionary.value}"/>
+					<div class="ui label right pointing dropdown icon button">
+						<i class="settings icon"></i>
+						<div class="menu">
+							<div class="item">
+								<i class="ui edit icon"></i> 修改
+							</div>
+							<div class="item">
+								<i class="ui remove icon"></i> 删除
+							</div>
 						</div>
 					</div>
-				</div>
-			</a> 
-			<a class="item">重要</a> 
-			<a class="item">重要</a>
-			<a class="item">重要</a>
-			<a class="item">重要</a>
+				</a> 
+			</th:block>
 		</div>
 		<div class="ui ten wide column" style="background: grey">
 
-			<div>
-				<button id="addDictionaryData" class="ui teal button">
-					<i class="ui add icon"></i> 字典数据
-				</button>
-			</div>
 
-			<table class="ui celled padded table">
-				<thead>
-					<tr>
-						<th class="single line">编码</th>
-						<th class="single line">文字</th>
-						<th class="single line">顺序</th>
-						<th class="single line">状态</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>
-							<h3>A01</h3>
-						</td>
-						<td class="single line">
-							<div class="ui transparent input">
-								<input type="text" placeholder="文字" value="日漫"></input>
-							</div>
-						</td>
-						<td>
-							<div class="ui transparent input">
-								<input type="text" placeholder="顺序" value="1"></input>
-							</div>
-						</td>
-						<td><select class="ui dropdown">
-								<option value="">状态</option>
-								<option value="1">使用</option>
-								<option value="0" selected="selected">暂停</option>
-						</select></td>
-					</tr>
-
-				</tbody>
-			</table>
 		</div>
 	</div>
 
@@ -119,56 +91,5 @@
 			<div class="ui approve green button">Approve</div>
 		</div>
 	</div>
-
-	<script type="text/javascript">
-		$('.ui.dropdown').dropdown();
-
-		$('#addDictionaryData').click(function() {
-			$('.ui.small.modal').modal('show');	
-		});
-		$('.ui.form')
-			.form({
-				on: 'blur',
-		    fields: {
-		      code		: 'empty',
-		      name		: 'empty',
-		      order		: 'number'
-		    }
-  	});
-
-		var content = [
-    {
-      title: 'Horse',
-      description: 'An Animal',
-    },
-    {
-      title: 'Cow',
-      description: 'Another Animal',
-    }
-  ]
-;
-$('.ui.search')
-  .search({
-    source : content,
-    searchFields   : [
-      'title'
-    ]
-  })
-;
-
-$.fn.api.settings.api = {
-  'add user'      : 'add/{id}',
-};
-
-$('.item.active')
-  .api({
-    action: "add user",
-    urlData: {
-    	id: 22
-    }
-  })
-;
-
-	</script>
 </body>
 </html>
