--- a/src/main/webapp/WEB-INF/templates/base/layout/user.html
+++ b/src/main/webapp/WEB-INF/templates/base/layout/user.html
@@ -6,7 +6,7 @@
 	<title>Insert title here</title>
 </head>
 
-<body th:fragment="template_content(content)">
+<body th:fragment="layout(content)">
 	
 	<div class="row">
 		<div th:replace="~{base/header}"></div>
