update template user html

--- a/src/main/webapp/WEB-INF/templates/user_register.html
+++ b/src/main/webapp/WEB-INF/templates/user_register.html
@@ -6,7 +6,7 @@
 	<th:block th:replace="~{base/lib}"></th:block>
 </head>
 
-<body th:replace="base/layout :: template_content(~{::.row})">
+<body th:replace="base/layout/user :: layout(~{::.row})">
 	<div class="row">
 		<div class="col-md-4"></div>
 		<div class="col-md-4">
