--- a/src/main/webapp/WEB-INF/templates/user/login.html
+++ b/src/main/webapp/WEB-INF/templates/user/login.html
@@ -2,15 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<title>user login</title>
-	<script type="text/javascript" th:src="@{/js/validate.js}"></script>
-	<link href="../resource/semantic/semantic.css" rel="stylesheet"></link>
+	<th:block th:replace="~{base/lib :: semantic}"></th:block>
+	<th:block th:replace="~{base/lib :: customer}"></th:block>
+	<!-- <link href="../resource/semantic/semantic.css" rel="stylesheet"></link>
 	<script type="text/javascript" src="../resource/js/tools/jquery.js"></script>
-	<script type="text/javascript" src="../resource/semantic/semantic.js"></script>
-	<th:block th:replace="~{base/lib}"></th:block>
+	<script type="text/javascript" src="../resource/semantic/semantic.js"></script> -->
 </head>
 
-<body th:replace="base/layout :: template_content(~{::.row})" style="background-image:url(../resource/pic/background.png);background-size:cover
-;" >
+<body style="background:#ccc;background-size:cover;" >
 	<div class="ui doubling three column centered grid" style="padding-top:150px;">
 		<div class="column">
 			<div role="login" class="ui segment" style="background:rgba(255,255,255,0.5);">
@@ -25,7 +24,9 @@
 							placeholder="密码" />
 							<i class="hide icon"></i>
 					</div>
-					<span class="error" th:text="${error}"></span>
+					<div class="ui filed error">
+						<span class="error" th:text="${error}"></span>
+					</div>
 					<div class="ui field checkbox">
 						<input type="checkbox" /> <label>记住我</label>
 					</div>
@@ -42,7 +43,7 @@
 			
 			<div class="ui message">
 				忘记密码？<a th:href="@{/user/reset}"><span>找回账号</span></a>
-				<br>
+				<br/>
 				如果账号还没有激活，请<a><span>激活账号</span></a>
 			</div>
 			
@@ -54,8 +55,6 @@
 				<i class="github icon"></i>
 					Github
 			</button>
-			
-			
 <!-- 			<div class="col-md-4">
 			
 				<label>使用其他账号登录</label>
