--- a/src/main/webapp/WEB-INF/templates/base/modal_form.html
+++ b/src/main/webapp/WEB-INF/templates/base/modal_form.html
@@ -1,6 +1,6 @@
 <html xmlns:th="www.thymeleaf.org">
 
-<div th:fragment="setting(title, form, modalSave)">
+<div th:fragment="setting(title, form)">
 <div style="margin: 20px;">
 	<div class="panel panel-default">
 		<div class="panel-heading">
@@ -12,10 +12,9 @@
 				</div>
 				<div class="col-md-offset-5 col-md-1">
 					<span>
-						<button class="btn btn-success btn-sm" data-toggle="modal"
-							data-target="#modal-save">
-							新增
-						</button>
+						<a class="btn btn-link btn-sm" data-toggle="modal"
+							data-target="#modal"
+							th:href="@{anime/form}">新增</a>
 					</span>
 				</div>
 			</div>
@@ -24,12 +23,9 @@
 	</div>
 </div>
 
-
- <!-- Modal Structure -->
- <div id="modal-save" class="modal modal-fixed-footer" th:insert="${modalSave}">
- </div>
- 
- </div>
+<div id="modal" class="modal modal-fixed-footer">
+	<div class="modal-content"></div>
+</div>
 
 <script type="text/javascript">
 <!-- 移除模态框的数据，为了触发重复加载页面 -->
@@ -38,4 +34,5 @@
 	});
 </script>
 
+</div>
 </html>
