update template base

--- a/src/main/webapp/WEB-INF/templates/base/lib.html
+++ b/src/main/webapp/WEB-INF/templates/base/lib.html
@@ -11,7 +11,7 @@
 <th:block th:fragment="react">
 	<script type="text/javascript" th:src="@{/js/tools/browser.min.js}"/></script>
 	<script type="text/javascript" th:src="@{/js/tools/react.js}"></script>
-	<script type="text/javascript" th:src="@{/js/tools/react-dom.js}"></script>、
+	<script type="text/javascript" th:src="@{/js/tools/react-dom.js}"></script>
 </th:block>
 
 <th:block th:fragment="formValidation">
