update admin html

--- a/src/main/webapp/WEB-INF/templates/admin/anime/index.html
+++ b/src/main/webapp/WEB-INF/templates/admin/anime/index.html
@@ -10,7 +10,7 @@
 
 <body th:replace="base/layout/admin :: layout(~{::#container})">
 	<div id="container"
-		th:insert="base/modal_form :: setting('标题', ~{::#content})">
+		th:insert="base/modal_form :: setting('标题', 'anime/form', ~{::#content})">
 		<div id="content">
 			<table class="table table-hover">
 				<colgroup>
