--- a/src/main/webapp/WEB-INF/templates/base/layout/admin.html
+++ b/src/main/webapp/WEB-INF/templates/base/layout/admin.html
@@ -1,7 +1,7 @@
 <html xmlns:th="www.thymeleaf.org">
 <body th:fragment="layout(content)">
 	<div class="display-table">
-		<div class="navbar navbar-default navbar-fixed-top topbar">
+		<div>
 			<div th:replace="~{base/header}"></div>
 		</div>
 		<div class="wrapper toggled">
