--- a/src/main/webapp/WEB-INF/templates/admin/user/edit.html
+++ b/src/main/webapp/WEB-INF/templates/admin/user/edit.html
@@ -1,62 +1,44 @@
 <html xmlns:th="www.thymeleaf.org">
 
+<th:block th:remove="all">
+	<script type="text/javascript" src="C:/Users/Admin/.m2/javascript/jquery.js"></script>
+	<script type="text/javascript" src="C:/Users/Admin/.m2/javascript/semantic/semantic.js"></script>
+	<link rel="stylesheet" href="C:/Users/Admin/.m2/javascript/semantic/semantic.css"></link>
+</th:block>
+
 <script type="text/javascript" th:src="@{/js/validate.js}"></script>
 
 <!-- Modal -->
-<form class="form-horizontal" name="user-info" action="update" id="userEditForm"
-	method="post">
-	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal"
-			aria-label="Close">
-			<span aria-hidden="true">&times;</span>
-		</button>
-		<h4 class="modal-title" id="myModalLabel">编辑用户信息</h4>
-	</div>
-	<div class="modal-body">
+
+<div class="ui text container content">
+	<form class="ui form" id="userEditForm" name="user-info" method="post"
+		th:action="@{/admin/user/update}" >
 		<input name="userId" type="hidden" th:value="${user.userId }"/>
-		<div class="form-group">
-			<label class="col-sm-3 control-label">用户名</label>
-			<div class="col-sm-6">
-				<input class="form-control" name="username" th:value="${user.username }"/>
+		<div class="field">
+			<label>用户名</label>
+			<input type="text" name="username" placeholder="请输入用户名"
+				th:value="${user.username }"/>
+		</div>
+		<div class="field">
+			<label>邮箱</label>
+			<input type="email" name="email" placeholder="请输入邮箱"
+				th:value="${user.email}"/>
+		</div>
+		<div class="field">
+			<label>密码</label>
+			<input type="password" name="password" placeholder="请输入密码"/>
+		</div>
+		<div class="field">
+			<div class="ui checkbox">
+				<input name="status" type="checkbox" value="1" checked="${user.status == 1} ? 'checked' : ''"/>
+				<label>激活状态</label>
 			</div>
 		</div>
-		<div class="form-group">
-			<label class="col-sm-3 control-label">邮箱</label>
-			<div class="col-sm-6">
-				<input class="form-control" name="email" th:value="${user.email }"/>
-			</div>
+		<div class="ui divider"></div>
+		<div class="actions">
+			<input type="submit"  class="ui green button" value="保存"/>
+			<button type="button" class="ui cancel button" data-dismiss="modal">关闭</button>
 		</div>
-
-		<div class="form-group">
-			<label class="col-sm-3 control-label">密码</label>
-			<div class="col-sm-6">
-				<input class="form-control" name="password" type="password" />
-			</div>
-		</div>
-
-		<div class="form-group">
-			<label class="col-sm-3 control-label">激活状态</label>
-			<div class="col-sm-6 switch" id="toggle-state-switch">
-				<th:block th:if="${user.status == 1}">
-					<input class="form-control" name="status" type="checkbox" value="1" checked="checked"/>
-				</th:block>		
-				<th:block th:unless="${user.status == 1}">
-						<input class="form-control" name="status" type="checkbox" value="1"/>					
-				</th:block>		
-			</div>
-		</div>
-	</div>
-	<div class="modal-footer">
-		<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-		<input type="submit" class="btn btn-primary" value="保存" />
-	</div>
-</form>
-
-<script type="text/javascript">
-$(document).ready(function() {
-	$("[name='status']").bootstrapSwitch();
-	
-})
-</script>
-
+	</form>
+</div>
 </html>
