--- a/src/main/webapp/WEB-INF/templates/admin/user/save.html
+++ b/src/main/webapp/WEB-INF/templates/admin/user/save.html
@@ -1,44 +1,42 @@
 <html xmlns:th="www.thymeleaf.org">
 
+<th:block th:remove="all">
+	<script type="text/javascript" src="C:/Users/Admin/.m2/javascript/jquery.js"></script>
+	<script type="text/javascript" src="C:/Users/Admin/.m2/javascript/semantic/semantic.js"></script>
+	<link rel="stylesheet" href="C:/Users/Admin/.m2/javascript/semantic/semantic.css"></link>
+</th:block>
+
 <script type="text/javascript" th:src="@{/js/validate.js}"></script>
+<script type="text/javascript" th:src="@{/js/semantic-user.js}"></script>
 
-<form class="form-horizontal" name="user-info" action="save" id="userRegisterForm"
-	method="post">
-	<div class="modal-body">
-		<div class="form-group">
-			<label class="col-sm-3 control-label">用户名</label>
-			<div class="col-sm-6">
-				<input class="form-control" name="username" placeholder="请输入用户名" />
+<div class="ui text container scrolling content">
+	<form class="ui form" id="userRegisterForm" name="user-info" method="post" th:action="@{/admin/user/save}" >
+		<div class="field">
+			<label>用户名</label>
+			<input type="text" name="username" placeholder="请输入用户名"/>
+		</div>
+		<div class="field">
+			<label>邮箱</label>
+			<input type="email" name="email" placeholder="请输入邮箱" />
+		</div>
+		<div class="field">
+			<label>密码</label>
+			<input type="password" name="password" placeholder="请输入密码"/>
+		</div>
+		<div class="field">
+			<div class="ui checkbox">
+				<input name="status" type="checkbox" value="1" />
+				<label>激活状态</label>
 			</div>
 		</div>
-		<div class="form-group">
-			<label class="col-sm-3 control-label">邮箱</label>
-			<div class="col-sm-6">
-				<input class="form-control" name="email" placeholder="请输入邮箱" />
-			</div>
+		<div class="ui divider"></div>
+		<div class="actions">
+			<input type="submit"  class="ui green button" value="保存"/>
+			<button type="button" class="ui cancel button" data-dismiss="modal">关闭</button>
 		</div>
+	</form>
+</div>
 
-		<div class="form-group">
-			<label class="col-sm-3 control-label">密码</label>
-			<div class="col-sm-6">
-				<input class="form-control" name="password" type="password"
-					placeholder="请输入密码"/>
-			</div>
-		</div>
-
-		<div class="form-group">
-			<label class="col-sm-3 control-label">激活状态</label>
-			<div class="col-sm-6 switch" id="toggle-state-switch">
-				<input class="form-control" name="status" type="checkbox" value="1" />
-			</div>
-		</div>
-	</div>
-	<div class="modal-footer">
-		<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-		<input type="submit"  class="btn btn-primary" value="保存"/>
-	</div>
-</form>
-
-<script>
-	$("[name='status']").bootstrapSwitch();
+<script type="text/javascript">
+	$('#userRegisterForm').form(userRule);
 </script>
