--- a/src/main/webapp/WEB-INF/templates/admin/index.html
+++ b/src/main/webapp/WEB-INF/templates/admin/index.html
@@ -3,15 +3,14 @@
 <head>
 	<title>后台管理</title>
 	<th:block th:replace="base/lib :: common" />
-	<th:block th:replace="base/lib :: bootstrap" />
-	<th:block th:replace="base/lib :: materialize" />
+	<th:block th:replace="base/lib :: semantic" />
+	<!-- <th:block th:replace="base/lib :: bootstrap" /> -->
+	<!-- <th:block th:replace="base/lib :: materialize" /> -->
 </head>
-<body th:replace="base/layout/admin :: layout(~{::.row})">
-	<div class="row">
-		<div class="container">
-			<div class="jumbotron">
-			  <h2>欢迎来到后台管理</h2>
-			</div>
+<body th:replace="base/layout/admin :: layout(~{::.container})">
+	<div class="ui text center aligned container">
+		<div class="ui tertiary segment">
+			<h2>欢迎来到后台管理</h2>
 		</div>
 	</div>
 </body>
