--- a/src/main/webapp/WEB-INF/templates/admin/anime/save.html
+++ b/src/main/webapp/WEB-INF/templates/admin/anime/save.html
@@ -1,67 +1,58 @@
 <html xmlns:th="www.thymeleaf.org">
 
-<script type="text/javascript" th:src="@{/js/validate.js}"></script>
+<th:block th:remove="all">
+	<script type="text/javascript" src="C:/Users/Admin/.m2/javascript/jquery.js"></script>
+	<script type="text/javascript" src="C:/Users/Admin/.m2/javascript/jquery.cookie.js"></script>
+	<script type="text/javascript" src="C:/Users/Admin/.m2/javascript/semantic/semantic.js"></script>
+	<link rel="stylesheet" href="C:/Users/Admin/.m2/javascript/semantic/semantic.css"></link>
+</th:block>
 
-<form class="form-horizontal" id="saveAnimeForm" action="anime/save"
-	method="post" enctype="multipart/form-data">
-	<div class="modal-content">
-	
-		<h4>新增番剧</h4>
-		<div class="form-group">
-			<label class="col-sm-3 control-label">名称</label>
-			<div class="col-sm-6">
-				<input class="form-control" name="name" placeholder="请输入番剧名称" />
-			</div>
+<th:block th:replace="base/lib :: semantic"></th:block>
+
+<div class="header">Header</div>
+<div class="scrolling content">
+	<div class="ui text container">
+	<form class="ui form" id="saveAnimeForm" action="@{/admin/anime/save}" method="post"
+		enctype="multipart/form-data">
+		<div class="field">
+			<label>名称</label>
+			<input type="text" name="name" placeholder="请输入番剧名称"></input>
 		</div>
 
-		<div class="form-group">
-			<label class="col-sm-3 control-label">别名</label>
-			<div class="col-sm-6">
-				<input class="form-control" name="alias" placeholder="请输入番剧别名" />
-			</div>
+		<div class="field">
+			<label>别名</label>
+			<input type="text" name="alias" placeholder="请输入番剧别名"></input>
 		</div>
 
-		<div class="form-group">
-			<div class="file-field input-field">
-	    		<div class="btn col-sm-offset-1 col-sm-2">
-	        		<span>上传图片</span>
-	   		     	<input type="file" name="picFile">
-	  	    	</div>
-		   	   	<div class="file-path-wrapper col-sm-6">
-		      		<input class="file-path validate" type="text" name="picFileText">
-		      	</div>
-	    	</div>
+		<div class="field">
+			<label>上传图片</label>
+			<input type="file" name="picFile">
 		</div>
 
-		<div class="form-group">
-			<label class="col-sm-3 control-label">描述</label>
-			<div class="col-sm-6">
-				<textarea class="form-control" name="description"
-					placeholder="请输入描述" rows="4"></textarea>
-			</div>
+		<div class="field">
+			<label>描述</label>
+			<textarea name="description" rows="4" placeholder="请输入描述"></textarea>
 		</div>
 
-		<div class="form-group">
-			<label class="col-sm-3 control-label">类别</label>
-			<div class="col-sm-6">
-				<select class="form-control" name="type">
-					<option th:each="animeType : ${animeTypes}" 
-						th:value="${animeType.code}" th:text="${animeType.value}"></option>
-				</select>
-			</div>
+		<div class="field">
+			<label>类别</label>
+			<select name="type">
+				<option value=""></option>
+				<option th:each="animeType : ${animeTypes}"
+					th:value="${animeType.code}" th:text="${animeType.value}"></option>
+			</select>
 		</div>
 
-		<div class="form-group">
-			<label class="col-sm-3 control-label">开始连载日期</label>
-			<div class="col-sm-6">
-				<input class="form-control" name="publishMonth" type="date" />
-			</div>
+		<div class="field">
+			<label>发布日期</label>
+			<input type="date" name="publishMonth"></input>
 		</div>
-
+		<input class="ui green button" type="submit" value="保存" />
+		<button class="ui button" value="取消"></button>
+	</form>
 	</div>
-	<div class="modal-footer">
-		<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-		<input type="submit" class="btn btn-primary" value="保存">
-	</div>
-</form>
+</div>
+<script type="text/javascript">
+	$(".ui.form").form(animeRule);
+</script>
 </html>
